Format code with Black

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
       # Run Black (check formatting only, don’t reformat automatically)
       - name: Run Black
-        run: black --check .
+        run: black --check  --diff .
 
       # Run Flake8 (linting)
       - name: Run Flake8
